# rnicro

./: Cargo.toml
src/: antidebug.rs  aslr.rs  breakpoint.rs  checksec.rs  coredump.rs  disasm.rs  dwarf.rs  dwarf_expr.rs  elf.rs  entropy.rs  error.rs  expr_eval.rs  fmtstr.rs  gdb_rsp.rs  got_hook.rs  heap.rs  heap_exploit.rs  lib.rs  main.rs  memscan.rs  one_gadget.rs  patch.rs  pattern.rs  pipe.rs  process.rs  procfs.rs  registers.rs  rop.rs  rop_chain.rs  shared_lib.rs  shellcode.rs  sigrop.rs  strings.rs  syscall.rs  syscall_trace.rs  target.rs  tube.rs  types.rs  unwind.rs  variables.rs  (+1 more)
